Fixed Webpage clipping

--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ button {
 /* Styling footer starts */
     #nav{
       height: 4rem;
-      width: 100vw;
     }
 
     .footer{
